tests/neg-custom-args/safe-init/simple-1g.scala
class Foo {
  var name: String = _  // error: name is not initialized
}